------------------------------------------------------------------------------
  pracma                                                                NEWS
------------------------------------------------------------------------------

CHANGES IN VERSION 1.6.4 (2014-02-02)

    o halley() Halley's variant of the Newton-Raphson method.

CHANGES IN VERSION 1.6.3 (2014-01-25)

    o lambertWp() improved inner accuracy from 1e-12 to 1e-15.
    o complexstepJ() renamed to jacobian_csd(); introduced grad_csd().
    o hessian_csd() applies Richardson's method as the second step,
      and the same for laplacian_csd().

CHANGES IN VERSION 1.6.2 (2014-01-19)

    o Removed zeroin(); for fzero() a variation of Brent-Dekker is used,
      that applies cubic instead of quadratic interpolation.
    o brent_dekker() renamed brentDekker(); it returns a list now.
    o corrected an oversight in newtonRaphson.

CHANGES IN VERSION 1.6.1 (2014-01-14)

    o samp_entropy() complements approx_entropy() for short time series.
    o Removed NEWS.Rd and NEWS.pdf in favour of NEWS.

CHANGES IN VERSION 1.6.0 (2013-12-06)

    o integral3() now handles functions as inner interval limits.
    o poly_crossings() calculates crossing points of two polygons.
    o erfz() complex error function vectorized (thanks to Michael Lachmann).

CHANGES IN VERSION 1.5.9 (2013-11-30)

    o muller() implements Muller's root-finding method [Mueller, 1956],
      especially suited for polynomials and complex functions.
    o Inserted a safeguard for the distmat() function to prevent different
      results on Mac OS X, (Ubuntu) Linux, and Windows operating systems.
    o Removed pltcross() and kmeanspp().

CHANGES IN VERSION 1.5.8 (2013-11-28)

    o interp1() with option method ``spline'' now computes Moler's spline 
      functions, for compatibility with Matlab (hint by Boudewijn Klijn).

CHANGES IN VERSION 1.5.7 (2013-10-11)

    o runs.test() implements the statistical 'Runs test'.