@@ -2,7 +2,7 @@ Package: pracma
 Type: Package
 Title: Practical Numerical Math Functions
 Version: 1.6.4
-Date: 2014-02-02
+Date: 2014-02-03
 Author: Hans Werner Borchers
 Maintainer: Hans W. Borchers <hwborchers@googlemail.com>
 Depends: R (>= 2.11.1)
